--- a/index.html
+++ b/index.html
@@ -56,6 +56,36 @@
 
 <!--Footer-->
 
+<footer>
+    <div class="footer-content">
+        <h3>TheereDays</h3>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolores reprehenderit incidunt quaerat eaque modi totam quae, aliquam rem recusandae asperiores quisquam in ipsum commodi molestiae accusantium iusto. Numquam, nobis esse.</p>
+           <!--social icon-->
+           <ul class="socials">
+            <li><a href="" class="fa fa-facebook"></a></li>
+            <li><a href="" class="fa fa-twitter"></a></li>
+            <li><a href="" class="fa fa-google-plus"></a></li>
+            <li><a href="" class="fa fa-youtube"></a></li>
+            <li><a href="" class="fa fa-linkedin-square"></a></li>
+           </ul> 
+           <!--footer menu-->
+           <div class="footer-menu">
+            <ul class="f-menu">
+                <li><a href="">Home</a></li>
+                <li><a href="">About</a></li>
+                <li><a href="">Content</a></li>
+                <li><a href="">Blog</a></li>
+                <li><a href="">Articles</a></li>
+            </ul>
+           </div>
+    </div>
+
+    <!--footer cradit-->
+
+    <div class="footer-bottom">
+        <p>Design By - <a href="">TheereDays</a></p>
+    </div>
+</footer>
 
 <!--Footer-->
 
