--- a/index.html
+++ b/index.html
@@ -62,11 +62,21 @@
         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolores reprehenderit incidunt quaerat eaque modi totam quae, aliquam rem recusandae asperiores quisquam in ipsum commodi molestiae accusantium iusto. Numquam, nobis esse.</p>
            <!--social icon-->
            <ul class="socials">
-            <li><a href="" class="fa fa-facebook"></a></li>
-            <li><a href="" class="fa fa-twitter"></a></li>
-            <li><a href="" class="fa fa-google-plus"></a></li>
-            <li><a href="" class="fa fa-youtube"></a></li>
-            <li><a href="" class="fa fa-linkedin-square"></a></li>
+            <li>
+                <i class="fa-brands fa-facebook-f"></i>
+            </li>
+            <li>
+                <i class="fa-brands fa-twitter"></i>
+            </li>
+            <li>
+                <i class="fa-brands fa-google-plus-g"></i>
+            </li>
+            <li>
+                <i class="fa-brands fa-youtube"></i>
+            </li>
+            <li>
+                <i class="fa-brands fa-linkedin"></i>
+            </li>
            </ul> 
            <!--footer menu-->
            <div class="footer-menu">
