login page finished

--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
             <li class="nav-item">
                 <a href="" class="nav-link">İletişim</a>
             </li>
+            <li class="nav-item">
+                <a href="login.html" class="nav-link">Giriş Yap</a>
+            </li>
         </ul>
 
         <div class="nav">
