--- a/index.html
+++ b/index.html
@@ -16,21 +16,21 @@
     <nav class="navbar">
         <div class="logo">
             <i class="fa-sharp fa-solid fa-earth-americas" id="world"></i>
-            <a href="" class="nav-branding"> ThreeDays </a>
+            <a href="index.html" class="logoName"> ThreeDays </a>
         </div>
 
         <ul class="nav-menu">
             <li class="nav-item">
-                <a href="" class="nav-link">Ana Sayfa</a>
+                <a href="" class="link">Ana Sayfa</a>
             </li>
             <li class="nav-item">
-                <a href="" class="nav-link">Hakkımızda</a>
+                <a href="" class="link">Hakkımızda</a>
             </li>
             <li class="nav-item">
-                <a href="" class="nav-link">İletişim</a>
+                <a href="" class="link">İletişim</a>
             </li>
             <li class="nav-item">
-                <a href="login.html" class="nav-link">Giriş Yap</a>
+                <a href="login.html" class="link">Giriş Yap</a>
             </li>
         </ul>
 
@@ -60,43 +60,37 @@
 <!--Footer-->
 
 <footer>
-    <div class="footer-content">
-        <h3>TheereDays</h3>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolores reprehenderit incidunt quaerat eaque modi totam quae, aliquam rem recusandae asperiores quisquam in ipsum commodi molestiae accusantium iusto. Numquam, nobis esse.</p>
-           <!--social icon-->
-           <ul class="socials">
-            <li>
-                <i class="fa-brands fa-facebook-f"></i>
-            </li>
-            <li>
-                <i class="fa-brands fa-twitter"></i>
-            </li>
-            <li>
-                <i class="fa-brands fa-google-plus-g"></i>
-            </li>
-            <li>
-                <i class="fa-brands fa-youtube"></i>
-            </li>
-            <li>
-                <i class="fa-brands fa-linkedin"></i>
-            </li>
-           </ul> 
-           <!--footer menu-->
-           <div class="footer-menu">
-            <ul class="f-menu">
-                <li><a href="">Home</a></li>
-                <li><a href="">About</a></li>
-                <li><a href="">Content</a></li>
-                <li><a href="">Blog</a></li>
-                <li><a href="">Articles</a></li>
-            </ul>
-           </div>
-    </div>
-
-    <!--footer cradit-->
-
-    <div class="footer-bottom">
-        <p>Design By - <a href="">TheereDays</a></p>
+    <h3>ThreeDays</h3>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolores reprehenderit incidunt quaerat eaque modi totam quae, aliquam rem recusandae asperiores quisquam in ipsum commodi molestiae accusantium iusto. Numquam, nobis esse.</p>
+       <ul class="iletisim-bilgi">
+        <li>
+            <i class="fa-brands fa-facebook-f"></i>
+        </li>
+        <li>
+            <i class="fa-brands fa-twitter"></i>
+        </li>
+        <li>
+            <i class="fa-brands fa-google-plus-g"></i>
+        </li>
+        <li>
+            <i class="fa-brands fa-youtube"></i>
+        </li>
+        <li>
+            <i class="fa-brands fa-linkedin"></i>
+        </li>
+       </ul> 
+       <!--footer menu-->
+       <div class="ftr-menu">
+        <ul class="f-menu">
+            <li><a href="">Home</a></li>
+            <li><a href="">About</a></li>
+            <li><a href="">Content</a></li>
+            <li><a href="">Blog</a></li>
+            <li><a href="">Articles</a></li>
+        </ul>
+       </div>
+    <div class="ftr-bottom">
+        <p>Design By - <a href="">ThreeDays</a></p>
     </div>
 </footer>
 
