navbar responsive düzenlemesi

--- a/index.html
+++ b/index.html
@@ -21,15 +21,19 @@
 
         <ul class="nav-menu">
             <li class="nav-item">
+                <i class="fa-solid fa-house"></i>
                 <a href="" class="link">Ana Sayfa</a>
             </li>
             <li class="nav-item">
+                <i class="fa-solid fa-address-card"></i>
                 <a href="" class="link">Hakkımızda</a>
             </li>
             <li class="nav-item">
+                <i class="fa-solid fa-message"></i>
                 <a href="" class="link">İletişim</a>
             </li>
             <li class="nav-item">
+                <i class="fa-solid fa-right-to-bracket"></i>
                 <a href="login.html" class="link">Giriş Yap</a>
             </li>
         </ul>
