--- a/login.html
+++ b/login.html
@@ -8,39 +8,37 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <section class="login">
+    <section class="giris">
         <div class="form-box">
-            <div class="form-value">
-                <form action="">
-                    <h2>Login</h2>
-                    <div class="inputbox">
+                <form>
+                    <h2>Giriş Yap</h2>
+                    <div class="input">
                         <ion-icon name="mail-outline"></ion-icon>
-                        <input type="email" required>
-                        <label for="">Email</label>
+                        <input type="email and text" required>
+                        <label>Email</label>
                     </div>
-                    <div class="inputbox">
+                    <div class="input">
                         <ion-icon name="lock-closed-outline"></ion-icon>
                         <input type="password" required>
-                        <label for="">Password</label>
+                        <label>Şifre</label>
                     </div>
                     <div class="forget">
-                        <label for="">
-                            <input type="checkbox">Remember Me
-                            <a href="">Forget Password</a>
+                        <label>
+                            <input type="checkbox">Beni Hatırla
+                            <a href="">Şifremi Unuttum</a>
                         </label>
                     </div>
                     <div class="btn">
-                        <button>Log in</button>
-                        <button id="signUp">Sign Up</button>
+                        <button>Giriş Yap</button>
+                        <button id="signUp">Kayıt Ol</button>
                     </div>
-                    <div class="register">
+                    <div class="kayıtOl">
                         <p>
-                            Don't have a account
-                            <a href="">Register</a>
+                            Hesabın Yok mu?
+                            <a href="">Kayıt ol</a>
                         </p>
                     </div>
                 </form>
-            </div>
         </div>
     </section>
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
