--- a/index.html
+++ b/index.html
@@ -68,29 +68,38 @@
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolores reprehenderit incidunt quaerat eaque modi totam quae, aliquam rem recusandae asperiores quisquam in ipsum commodi molestiae accusantium iusto. Numquam, nobis esse.</p>
        <ul class="iletisim-bilgi">
         <li>
-            <i class="fa-brands fa-facebook-f"></i>
+            <a href="https://www.facebook.com/facebook/?locale=tr_TR">
+                <i class="fa-brands fa-facebook-f"></i>
+            </a>
         </li>
         <li>
-            <i class="fa-brands fa-twitter"></i>
+            <a href="https://twitter.com/?lang=tr">
+                <i class="fa-brands fa-twitter"></i>
+            </a>
         </li>
         <li>
-            <i class="fa-brands fa-google-plus-g"></i>
+            <a href="https://github.com/ThreeeDays/ThreeDays">
+                <i class="fa-brands fa-github"></i>
+            </a>
         </li>
         <li>
-            <i class="fa-brands fa-youtube"></i>
+            <a href="https://www.youtube.com/">
+                <i class="fa-brands fa-youtube"></i>
+            </a>
         </li>
         <li>
-            <i class="fa-brands fa-linkedin"></i>
+            <a href="https://www.linkedin.com/">
+                <i class="fa-brands fa-linkedin"></i>
+            </a>
         </li>
        </ul> 
        <!--footer menu-->
        <div class="ftr-menu">
         <ul class="f-menu">
-            <li><a href="">Home</a></li>
-            <li><a href="">About</a></li>
-            <li><a href="">Content</a></li>
-            <li><a href="">Blog</a></li>
-            <li><a href="">Articles</a></li>
+            <li><a href="index.html">Ana Sayfa</a></li>
+            <li><a href="">Hakkımızda</a></li>
+            <li><a href="">İletişim</a></li>
+            <li><a href="login.html">Giriş Yap</a></li>
         </ul>
        </div>
     <div class="ftr-bottom">
