--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <header>
     <nav class="navbar">
         <div class="logo">
-            <i class="fa-sharp fa-solid fa-earth-americas" id="world"></i>
+            <i class="fa-sharp fa-solid fa-earth-europe" id="world"></i>
             <a href="index.html" class="logoName"> ThreeDays </a>
         </div>
 
