--- a/index.html
+++ b/index.html
@@ -9,6 +9,14 @@
 
     <!-- Font Awesome CDN link -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
+<!--Background Fonts-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Wallpoet&display=swap" rel="stylesheet">
+<!--Background Fonts-->
+
+
 </head>
 <body>
 <!--Header-->
@@ -52,10 +60,31 @@
 <!--Content-->
 
 
-<!--Main-->
+<!--Article-->
+
+<body>
+    <div class="World">
+<video  autoplay muted loop >
+
+<source src="img/World.mp4" type="video/mp4">
+
+</video>
+
+<div class="content">
+  
+    <h1>World</h1>
+    <p>World,WorldWorld,WorldWorld,WorldWorld,WorldWorld,World</p>
+
+</div> 
+
+</div>
+
+</body>
+</html>
 
 
-<!--Main-->
+
+<!--Article-->
 
 
 <!--Content-->
