contact page finished

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             </li>
             <li class="nav-item">
                 <i class="fa-solid fa-message"></i>
-                <a href="" class="link">İletişim</a>
+                <a href="contact.html" class="link">İletişim</a>
             </li>
             <li class="nav-item">
                 <i class="fa-solid fa-right-to-bracket"></i>
@@ -110,7 +110,7 @@
         <ul class="f-menu">
             <li><a href="index.html">Ana Sayfa</a></li>
             <li><a href="">Hakkımızda</a></li>
-            <li><a href="">İletişim</a></li>
+            <li><a href="contact.html">İletişim</a></li>
             <li><a href="login.html">Giriş Yap</a></li>
         </ul>
        </div>
