--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Final Project</title>
+    <link rel="shortcut icon" href="img/favicon2.png" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
 
     <!-- Font Awesome CDN link -->
@@ -29,7 +30,7 @@
         <ul class="nav-menu">
             <li class="nav-item">
                 <i class="fa-solid fa-house"></i>
-                <a href="" class="link">Ana Sayfa</a>
+                <a href="" class="link" id="actv">Ana Sayfa</a>
             </li>
             <li class="nav-item">
                 <i class="fa-solid fa-address-card"></i>
@@ -111,7 +112,7 @@
             <li><a href="index.html">Ana Sayfa</a></li>
             <li><a href="">Hakkımızda</a></li>
             <li><a href="contact.html">İletişim</a></li>
-            <li><a href="login.html">Giriş Yap</a></li>
+            <li><a href="login.html">Giriş Yap / Kayıt Ol</a></li>
         </ul>
        </div>
     <div class="ftr-bottom">
