--- a/login.html
+++ b/login.html
@@ -7,7 +7,17 @@
     <title>LOG IN | ThreeDays</title>
     <link rel="stylesheet" href="style.css">
 
-    
+    <link rel="shortcut icon" href="img/favicon2.png" type="image/x-icon">
+    <link rel="stylesheet" href="style.css">
+
+    <!-- Font Awesome CDN link -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
+<!--Background Fonts-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Wallpoet&display=swap" rel="stylesheet">
+<!--Background Fonts-->
 </head>
 <body>
     <section class="giris">
@@ -42,6 +52,43 @@
                     </div>
                 </form>
         </div>
+
+        <div class="form-box">
+            <form>
+                <h2>Kayıt Ol</h2>
+                <div class="input">
+                    <i class="fa-regular fa-user"></i>
+                    <input type="text" required>
+                    <label>İsim</label>
+                </div>
+                <div class="input">
+                    <ion-icon name="mail-outline"></ion-icon>
+                    <input type="email and text" required>
+                    <label>Email</label>
+                </div>
+                <div class="input">
+                    <ion-icon name="lock-closed-outline"></ion-icon>
+                    <input type="password" required>
+                    <label>Şifre</label>
+                </div>
+                <div class="forget">
+                    <label>
+                        <input type="checkbox">Beni Hatırla
+                        <a href="">Şifremi Unuttum</a>
+                    </label>
+                </div>
+                <div class="btn">
+                    <button>Kayıt Ol</button>
+                    <button id="login">Giriş Yap</button>
+                </div>
+                <div class="kayıtOl">
+                    <p>
+                        Hesabın Var Mı?
+                        <a href="">Giriş Yap</a>
+                    </p>
+                </div>
+            </form>
+    </div>
     </section>
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
