--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 
     <div class="content">
         <h1>World</h1>
-        <p>World,WorldWorld,WorldWorld,WorldWorld,WorldWorld,World</p>
+        <p>Welcome to Our World</p>
     </div> 
 </div>
 <!--First Map İntroduction-->
