--- a/index.html
+++ b/index.html
@@ -61,11 +61,11 @@
 <!--Article-->
 <div class="World">
     <video  autoplay muted loop >
-        <source src="img/World.mp4" type="video/mp4">
+        <source src="img/pyramid.mp4" type="video/mp4">
     </video>
 
     <div class="content">
-        <h1>World</h1>
+        <h1>World Map</h1>
         <p>Welcome to Our World</p>
     </div> 
 </div>
