--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Final Project</title>
+    <title>ThreeWorld</title>
     <link rel="shortcut icon" href="img/favicon2.png" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
 
@@ -24,7 +24,7 @@
     <nav class="navbar">
         <div class="logo">
             <i class="fa-sharp fa-solid fa-earth-europe" id="world"></i>
-            <a href="index.html" class="logoName"> ThreeDays </a>
+            <a href="index.html" class="logoName"> ThreeWorld </a>
         </div>
 
         <ul class="nav-menu">
@@ -110,7 +110,7 @@
 <!--Footer-->
 
 <footer>
-    <h3>ThreeDays</h3>
+    <h3>ThreeWorld</h3>
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolores reprehenderit incidunt quaerat eaque modi totam quae, aliquam rem recusandae asperiores quisquam in ipsum commodi molestiae accusantium iusto. Numquam, nobis esse.</p>
        <ul class="iletisim-bilgi">
         <li>
@@ -149,7 +149,7 @@
         </ul>
        </div>
     <div class="ftr-bottom">
-        <p>Design By - <a href="">ThreeDays</a></p>
+        <p>Design By - <a href="" id="name">ThreeDays</a></p>
     </div>
 </footer>
 
