--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <nav class="navbar">
         <div class="logo">
             <i class="fa-sharp fa-solid fa-earth-europe" id="world"></i>
-            <a href="index.html" class="logoName"> ThreeWorld </a>
+            <a href="index.html" class="logoName"> Wanderlust </a>
         </div>
 
         <ul class="nav-menu">
@@ -110,7 +110,7 @@
 <!--Footer-->
 
 <footer>
-    <h3>ThreeWorld</h3>
+    <h3>Wanderlust</h3>
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolores reprehenderit incidunt quaerat eaque modi totam quae, aliquam rem recusandae asperiores quisquam in ipsum commodi molestiae accusantium iusto. Numquam, nobis esse.</p>
        <ul class="iletisim-bilgi">
         <li>
