--- a/contact.html
+++ b/contact.html
@@ -107,6 +107,52 @@
 </section>
 <!--Contact-->
 
+<!--Footer-->
+<footer>
+    <h3>Wanderlust</h3>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolores reprehenderit incidunt quaerat eaque modi totam quae, aliquam rem recusandae asperiores quisquam in ipsum commodi molestiae accusantium iusto. Numquam, nobis esse.</p>
+       <ul class="iletisim-bilgi">
+        <li>
+            <a href="https://www.facebook.com/facebook/?locale=tr_TR">
+                <i class="fa-brands fa-facebook-f"></i>
+            </a>
+        </li>
+        <li>
+            <a href="https://twitter.com/?lang=tr">
+                <i class="fa-brands fa-twitter"></i>
+            </a>
+        </li>
+        <li>
+            <a href="https://github.com/ThreeeDays/ThreeDays">
+                <i class="fa-brands fa-github"></i>
+            </a>
+        </li>
+        <li>
+            <a href="https://www.youtube.com/">
+                <i class="fa-brands fa-youtube"></i>
+            </a>
+        </li>
+        <li>
+            <a href="https://www.linkedin.com/">
+                <i class="fa-brands fa-linkedin"></i>
+            </a>
+        </li>
+       </ul> 
+       <!--footer menu-->
+       <div class="ftr-menu">
+        <ul class="f-menu">
+            <li><a href="index.html">Ana Sayfa</a></li>
+            <li><a href="">Hakkımızda</a></li>
+            <li><a href="contact.html">İletişim</a></li>
+            <li><a href="login.html">Giriş Yap / Kayıt Ol</a></li>
+        </ul>
+       </div>
+    <div class="ftr-bottom">
+        <p>Design By - <a href="" id="name">ThreeDays</a></p>
+    </div>
+</footer>
+<!--Footer-->
+
     <script src="script.js"></script>
 
 </body>
