--- a/contact.html
+++ b/contact.html
@@ -37,7 +37,7 @@
             </li>
             <li class="nav-item">
                 <i class="fa-solid fa-message"></i>
-                <a href="" class="link">İletişim</a>
+                <a href="" class="link" id="actv">İletişim</a>
             </li>
             <li class="nav-item">
                 <i class="fa-solid fa-right-to-bracket"></i>
