--- a/singUp.html
+++ b/singUp.html
@@ -31,7 +31,7 @@
         <ul class="nav-menu">
             <li class="nav-item">
                 <i class="fa-solid fa-house"></i>
-                <a href="" class="link" id="actv">Ana Sayfa</a>
+                <a href="" class="link">Ana Sayfa</a>
             </li>
             <li class="nav-item">
                 <i class="fa-solid fa-address-card"></i>
@@ -43,7 +43,7 @@
             </li>
             <li class="nav-item">
                 <i class="fa-solid fa-right-to-bracket"></i>
-                <a href="login.html" class="link">Giriş Yap</a>
+                <a href="login.html" class="link" id="actv">Giriş Yap</a>
             </li>
         </ul>
 
