--- a/map.html
+++ b/map.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="style.css"> <style>
+   <style>
     *{
         box-sizing: border-box;
     }
@@ -85,7 +85,7 @@
     <script src="script.js"></script>
     
     <div class="img-magnifier-container">
-<img src="img/aa.jpg" id="worldmag" alt="Worldmap" class="scary"usemap="#worldmap" style="width: 1505px; height: auto;">
+<img src="img/asa.jpg" id="worldmag" alt="Worldmap" class="scary"usemap="#worldmap" style="width: 1505px; height: auto;">
 </div>
 <map name="worldmap">
 
