--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>İletişim | ThreeDays</title>
+    <title>İletişim | Wanderlust</title>
     <link rel="stylesheet" href="style.css">
 
     <!-- Font Awesome CDN link -->
@@ -23,7 +23,7 @@
     <nav class="navbar">
         <div class="logo">
             <i class="fa-sharp fa-solid fa-earth-europe" id="world"></i>
-            <a href="index.html" class="logoName"> ThreeDays </a>
+            <a href="index.html" class="logoName"> Wanderlust </a>
         </div>
 
         <ul class="nav-menu">
@@ -38,10 +38,6 @@
             <li class="nav-item">
                 <i class="fa-solid fa-message"></i>
                 <a href="" class="link" id="actv">İletişim</a>
-            </li>
-            <li class="nav-item">
-                <i class="fa-solid fa-right-to-bracket"></i>
-                <a href="login.html" class="link">Giriş Yap</a>
             </li>
         </ul>
 
@@ -144,7 +140,6 @@
             <li><a href="index.html">Ana Sayfa</a></li>
             <li><a href="">Hakkımızda</a></li>
             <li><a href="contact.html">İletişim</a></li>
-            <li><a href="login.html">Giriş Yap / Kayıt Ol</a></li>
         </ul>
        </div>
     <div class="ftr-bottom">
