--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ThreeWorld</title>
+    <title>Wanderlust</title>
     <link rel="shortcut icon" href="img/favicon2.png" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
 
@@ -39,10 +39,6 @@
             <li class="nav-item">
                 <i class="fa-solid fa-message"></i>
                 <a href="contact.html" class="link">İletişim</a>
-            </li>
-            <li class="nav-item">
-                <i class="fa-solid fa-right-to-bracket"></i>
-                <a href="login.html" class="link">Giriş Yap</a>
             </li>
         </ul>
 
@@ -95,17 +91,9 @@
 </div> 
 <!--First Map İntroduction-->
 
-
-
-
-
-
-
 <!--Article-->
 
-
 <!--Content-->
-
 
 <!--Footer-->
 <footer>
@@ -144,7 +132,6 @@
             <li><a href="index.html">Ana Sayfa</a></li>
             <li><a href="">Hakkımızda</a></li>
             <li><a href="contact.html">İletişim</a></li>
-            <li><a href="login.html">Giriş Yap / Kayıt Ol</a></li>
         </ul>
        </div>
     <div class="ftr-bottom">
