--- a/index.html
+++ b/index.html
@@ -30,11 +30,11 @@
         <ul class="nav-menu">
             <li class="nav-item">
                 <i class="fa-solid fa-house"></i>
-                <a href="" class="link" id="actv">Ana Sayfa</a>
+                <a href="index.html" class="link" id="actv">Ana Sayfa</a>
             </li>
             <li class="nav-item">
                 <i class="fa-solid fa-address-card"></i>
-                <a href="" class="link">Hakkımızda</a>
+                <a href="about.html" class="link">Hakkımızda</a>
             </li>
             <li class="nav-item">
                 <i class="fa-solid fa-message"></i>
