map responsive ookey

--- a/about.html
+++ b/about.html
@@ -109,7 +109,7 @@
 
 <footer>
     <h3>Wanderlust</h3>
-    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolores reprehenderit incidunt quaerat eaque modi totam quae, aliquam rem recusandae asperiores quisquam in ipsum commodi molestiae accusantium iusto. Numquam, nobis esse.</p>
+    <p>Bu sitede özel kordinat ile alınmış kıta ve ülke tanıtan 2D harita yer almaktadır. Amacımız gezmeyi seven ve gezmeyi düşünen insanların öğrenip ona göre gezmesini ve kültürlerini genişletmesini sağlamak.</p>
        <ul class="iletisim-bilgi">
         <li>
             <a href="https://www.facebook.com/facebook/?locale=tr_TR">
